yiltc-v0.2-backup/testsuite/negative/variadic_not_last.yilt
// Negative test: variadic parameter must be the last
fn foo(a int, b ...int, c int)
    return 0
